# libnano

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .travis.yml  .vimrc  CMakeLists.txt  LICENSE  README.md  build.sh  libnano.doxygen  vcpkg.json
app/: CMakeLists.txt  bench_dataset.cpp  bench_eigen.cpp  bench_function.cpp  bench_gboost.cpp  bench_linear.cpp  bench_parallel.cpp  bench_program.cpp  bench_solver.cpp  bench_tpool.cpp  info.cpp  info_dataset.cpp  parameter_tracker.h  qt5mainwindow.cpp  qt5mainwindow.h  qt5ui.cpp  util.h
example/: CMakeLists.txt  vcpkg.json
example/src/: constrained.cpp  info.cpp  linprog.cpp  main.cpp  minimize.cpp  nonlinear.cpp  qt5mainwindow.cpp  qt5mainwindow.h  quadprog.cpp  tensor.cpp
libnano/: CMakeLists.txt
libnano/app/: CMakeLists.txt  bench_eigen.cpp  bench_function.cpp  bench_solver.cpp  bench_tpool.cpp  info.cpp
libnano/cmake/: NANOConfig.cmake.in  utils.cmake  version.h.in
libnano/include/nano/: arch.h  chrono.h  cmdline.h  cortex.h  factory.h  function.h  json.h  logger.h  loss.h  lsearch.h  lsearch_algo.h  lsearch_init.h  lsearch_step.h  measure.h  mlearn.h  numeric.h  probe.h  random.h  scalar.h  solver.h  stats.h  string_utils.h  table.h  timer.h  tpool.h
libnano/src/: CMakeLists.txt  arch.cpp  cmdline.cpp  function.cpp  loss.cpp  lsearch.cpp  lsearch0.cpp  lsearch_algo.cpp  lsearch_init.cpp  lsearchk.cpp  solver.cpp  table.cpp
libnano/src/functions/: dixon_price.h  (+6 more)
libnano/test/: CMakeLists.txt  test_core_chrono.cpp  test_core_cmdline.cpp  test_core_json.cpp  test_core_random.cpp  test_core_stats.cpp  test_core_string.cpp  test_core_table.cpp  test_core_tpool.cpp  test_json.cpp  test_loss.cpp  test_lsearch.cpp  test_solver.cpp  test_string.cpp  test_tensor_index.cpp  test_tpool.cpp
src/: CMakeLists.txt  cmdline.cpp  configurable.cpp  dataset.cpp  datasource.cpp  feature.cpp  function.cpp  generator.cpp  imclass.cpp  learner.cpp  linear.cpp  linprog.cpp  logger.cpp  loss.cpp  lsearch0.cpp  lsearchk.cpp  model.cpp  parameter.cpp  solver.cpp  splitter.cpp  stream.cpp  table.cpp  tabular.cpp  tuner.cpp  wlearner.cpp
src/core/: CMakeLists.txt  chrono.cpp  cmdline.cpp  configurable.cpp  estimator.cpp  histogram.cpp  logger.cpp  parallel.cpp  parameter.cpp  parameter_tracker.cpp  random.cpp  sampling.cpp  serializable.cpp  strutil.cpp  table.cpp  tpool.cpp
src/dataset/: CMakeLists.txt  abalone.cpp  abalone.h  adult.cpp  adult.h  bank_marketing.cpp  bank_marketing.h  breast_cancer.cpp  breast_cancer.h  feature.cpp  forest_fires.cpp  forest_fires.h  hash.cpp  imclass.cpp  imclass_cifar.cpp  imclass_mnist.cpp  iris.cpp  iris.h  iterator.cpp  mask.cpp  poker_hand.cpp  poker_hand.h  stats.cpp  tabular.cpp  tabular.h  tabular_abalone.cpp  tabular_adult.cpp  tabular_bank_marketing.cpp  tabular_breast_cancer.cpp  tabular_forest_fires.cpp  tabular_iris.cpp  tabular_wine.cpp  wine.cpp  wine.h
src/datasource/: CMakeLists.txt  feature.cpp  imclass_cifar.cpp  imclass_mnist.cpp  linear.cpp  mask.cpp  random.cpp  stats.cpp  tabular.cpp  util.cpp
src/function/: CMakeLists.txt  axis_ellipsoid.cpp  benchmark.cpp  cauchy.cpp  chung_reynolds.cpp  constraint.cpp  constraints.cpp  dixon_price.cpp  elastic_net.cpp  exponential.cpp  geometric.cpp  kinks.cpp  linear.cpp  linprog.cpp  penalty.cpp  powell.cpp  program.cpp  qing.cpp  quadratic.cpp  rosenbrock.cpp  rotated_ellipsoid.cpp  sargan.cpp  schumer_steiglitz.cpp  sphere.cpp  styblinski_tang.cpp  trid.cpp  util.cpp  zakharov.cpp
src/gboost/: CMakeLists.txt  accumulator.cpp  bias.cpp  early_stopping.cpp  function.cpp  model.cpp  result.cpp  sampler.cpp  scale.cpp  util.cpp  wlearner.cpp  wlearner_affine.cpp  wlearner_dstep.cpp  wlearner_dtree.cpp  wlearner_feature1.cpp  wlearner_hinge.cpp  wlearner_linear.cpp  wlearner_stump.cpp  wlearner_table.cpp
src/generator/: CMakeLists.txt  elemwise_base.cpp  elemwise_gradient.cpp  elemwise_identity.cpp  elemwise_input.cpp  generator.cpp  iterator.cpp  pairwise_base.cpp  pairwise_input.cpp  pairwise_product.cpp
src/imclass/: cifar.cpp  mnist.cpp
src/linear/: CMakeLists.txt  accumulator.cpp  cache.cpp  elastic_net.cpp  function.cpp  lasso.cpp  model.cpp  ordinary.cpp  result.cpp  ridge.cpp  util.cpp
src/loss/: CMakeLists.txt  classification.h  pinball.cpp  regression.h
src/lsearch0/: CMakeLists.txt  cgdescent.cpp  cgdescent.h  constant.cpp  linear.cpp  linear.h  quadratic.cpp  quadratic.h
src/lsearchk/: CMakeLists.txt  backtrack.cpp  backtrack.h  cgdescent.cpp  cgdescent.h  fletcher.cpp  fletcher.h  lemarechal.cpp  lemarechal.h  morethuente.cpp  morethuente.h
src/machine/: CMakeLists.txt  cluster.cpp  params.cpp  result.cpp  stats.cpp  tune.cpp
src/mlearn/: CMakeLists.txt  cluster.cpp  config.cpp  fit_hparam.cpp  fit_result.cpp  kfold.cpp  params.cpp  result.cpp  stacking.cpp  stats.cpp  train.cpp  tune.cpp  util.cpp
src/model/: cluster.cpp  evaluation.cpp  grid_search.cpp  kfold.cpp  param_space.cpp  result.cpp  surrogate.cpp  tuner.cpp  util.cpp
src/program/: CMakeLists.txt  benchmark.cpp  constrained.cpp  constraint.cpp  linear.cpp  quadratic.cpp  solver.cpp  state.cpp  util.cpp
src/solver/: CMakeLists.txt  asga.cpp  asga.h  asgm.cpp  augmented.cpp  bundle.cpp  bundle.h  cgd.cpp  cgd.h  cocob.cpp  cocob.h  csearch.cpp  csearch.h  dsbm.cpp  dsbm.h  ellipsoid.cpp  ellipsoid.h  fgm.cpp  fpba.cpp  fpba.h  gd.cpp  gd.h  gs.cpp  gsample.cpp  gsample.h  interior.cpp  interior.h  lbfgs.cpp  lbfgs.h  linprog.cpp  lsearch.cpp  lstep.cpp  nesterov.cpp  nesterov.h  newton.cpp  newton.h  nonsmooth_state.cpp  osga.cpp  osga.h  pdsgm.cpp  (+16 more)
src/splitter/: CMakeLists.txt  kfold.cpp  kfold.h  random.cpp  random.h
src/tabular/: abalone.cpp  adult.cpp  bank_marketing.cpp  breast_cancer.cpp  forest_fires.cpp  iris.cpp  poker_hand.cpp  wine.cpp
src/tuner/: CMakeLists.txt  local.cpp  space.cpp  step.cpp  surrogate.cpp  util.cpp
src/util/: cmdline.cpp  table.cpp
src/wlearner/: CMakeLists.txt  accumulator.cpp  affine.cpp  criterion.cpp  dstep.cpp  dtree.cpp  hash.cpp  hinge.cpp  mhash.cpp  single.cpp  stump.cpp  table.cpp  util.cpp
(+982 files in other folders)
