make_app(info NANO::nano)
make_app(bench_eigen NANO::nano)
#make_app(bench_gboost NANO::nano)
make_app(bench_linear NANO::nano)
make_app(bench_solver NANO::nano)
make_app(bench_dataset NANO::nano)
make_app(bench_function NANO::nano)
make_app(bench_parallel NANO::nano)

find_package(OpenMP QUIET)
if(OPENMP_FOUND)
    message(STATUS "Building thread pool benchmark with OpenMP support")
    target_link_libraries(bench_parallel PRIVATE OpenMP::OpenMP_CXX)
else()
    message(WARNING "Cannot find OpenMP")
endif()

copy_runtime_dlls(bench_eigen)
