make_app(info NANO::machine)
make_app(bench_eigen NANO::core)
make_app(bench_parallel NANO::core)
make_app(bench_gboost NANO::machine)
make_app(bench_linear NANO::machine)
make_app(bench_solver NANO::solver)
make_app(bench_dataset NANO::machine)
make_app(bench_function NANO::solver)

find_package(OpenMP QUIET)
if(OPENMP_FOUND)
    message(STATUS "Building thread pool benchmark with OpenMP support")
    target_link_libraries(bench_parallel PRIVATE OpenMP::OpenMP_CXX)
else()
    message(WARNING "Cannot find OpenMP")
endif()

copy_runtime_dlls(bench_eigen)
